Fixed emoji vertical align

--- a/src/styles/EmojiPicker.css
+++ b/src/styles/EmojiPicker.css
@@ -36,6 +36,10 @@
     color: rgba(0, 0, 0, 0.35);
 }
 
+.emoji-mart-emoji {
+    vertical-align: middle;
+}
+
 button.emoji-mart-emoji {
     outline: none;
 }
